2009-05-25  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbø.

        https://bugs.webkit.org/show_bug.cgi?id=25612

        Support conditionals in the tag factories, by placing
        feature #ifdefs around the individual factory functions
        and the registration.

        Made the Audio and Video elements conditional in the tag factories

        * html/HTMLTagNames.in:
        * dom/make_names.pl:

2009-05-25  Simon Hausmann  <simon.hausmann@nokia.com>

        Fix the Gtk build when video is disabled.

        * GNUmakefile.am: Always generate and compile the IDL files for the media
        elements. They contain proper feature #ifdefs.

2009-05-25  Simon Hausmann  <simon.hausmann@nokia.com>

        Fix the Qt build when video is disabled.

        * WebCore.pro: Always generate the IDL files for the media elements. They
        contain proper ENABLE(VIDEO) #ifdefs.

2009-05-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=26004

        The origin for postMessage should follow lexical scope, not dynamic
        scope.  Yes, this is a super-obscure corner case.

        Test: http/tests/security/postMessage/origin-follows-lexical-scope.html

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::postMessage):
        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):

2009-05-24  Darin Fisher  <darin@chromium.org>

        Reviewed by Mark Rowe.

        Fix build bustage related to PassOwnPtr changes.

        https://bugs.webkit.org/show_bug.cgi?id=25999

        * platform/graphics/chromium/TransparencyWin.cpp:

2009-05-24  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=25988

        Minor cleanup in PluginPackage::hash. Let the compiler
        figure out the size of the array. Do not have it in the